/* 
  Localizable.strings
  tipjar

  Created by Victor Idongesit on 11/06/2022.
  
*/

"enter_amount" = "Enter Amount";
"how_many_people" = "How many people?";
"total_tip" = "Total tip";
"percent_tip" = "% TIP";
"per_person" = "Per Person";
"take_photo_of_receipt" = "Take photo of receipt";
"save_payment" = "Save Payment";
"tip" = "Tip";
"saved_payments" = "SAVED PAYMENTS";
"pinch_to_zoom" = "Pinch image to zoom";
"no_tips_recorded" = "No Tips\nRecorded";
"dollar_symbol" = "$";
"pounds_symbol" = "£";
"euros_symbol" = "€";
"dollar_string" = "dollar";
"pound_string" = "pounds";
"euros_string" = "euros";
